--- a/Whoosh/BRI.ipynb
+++ b/Whoosh/BRI.ipynb
@@ -2,20 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "similarity laws obeyed constructing aeroelastic models heated high speed aircraft .\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def remove_stopwords(query):\n",
-    "    stopwords = ['a', 'the', 'an', 'and', 'or', 'but', 'about', 'above', 'after', 'along', 'amid', 'among', 'as', 'at', 'by', 'for', 'from', 'in', 'into', 'like', 'minus', 'near', 'of', 'off', 'on', 'onto', 'out', 'over', 'past', 'per', 'plus', 'since', 'till', 'to', 'up', 'via', 'vs', 'with', 'that', 'can', 'cannot', 'could', 'may', 'might', 'must', 'need', 'ought', 'shall', 'should', 'will', 'would', 'have', 'had', 'has', 'having', 'be', 'is', 'am', 'are', 'was', 'were', 'being', 'been', 'get', 'gets', 'got', 'gotten', 'getting', 'seem', 'seeming', 'seems', 'seemed', 'enough', 'both', 'all', 'your', 'those', 'this', 'these', 'their', 'the', 'that', 'some', 'our', 'no', 'neither', 'my', 'its', 'his', 'her', 'every', 'either', 'each', 'any', 'another', 'an', 'a', 'just', 'mere', 'such', 'merely', 'right', 'no', 'not', 'only', 'sheer', 'most', 'rather', 'somewhat', 'sufficiently', 'same', 'different', 'such', 'when', 'why', 'where', 'how', 'what', 'who', 'whom', 'which', 'whether', 'why', 'whose', 'if', 'anybody', 'anyone', 'anyplace', 'anything', 'anytime', 'anywhere', 'everybody', 'everyday', 'everyone', 'everyplace', 'everything', 'everywhere', 'whatever', 'whenever', 'wherever', 'whichever', 'whoever', 'whomever', 'he', 'him', 'his', 'her', 'she', 'it', 'they', 'them', 'its', 'their', 'theirs', 'you', 'your', 'yours', 'me', 'my', 'mine', 'I', 'we', 'us', 'much', 'and/or']\n",
+    "    stopwords = [\n",
+    "    'a', 'an', 'the', 'and', 'or', 'but', 'about', 'above', 'after', 'along', 'as', 'at', 'by', 'for', \n",
+    "    'from', 'in', 'into', 'of', 'on', 'onto', 'over', 'to', 'up', 'with', 'is', 'are', 'was', 'were'\n",
+    "]\n",
     "\n",
     "    # Convertendo para minúsculas \n",
     "    cleaned_query = query.lower()\n",
@@ -34,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +150,7 @@
     "    document_index = open_dir(\"C:\\\\Users\\\\maxwe\\\\OneDrive\\\\Área de Trabalho\\\\cran\\\\whoosh\")\n",
     "\n",
     "    # Definir os campos onde deseja pesquisar\n",
-    "    fields = [\"content\"]\n",
+    "    fields = [\"content\", \"title\", \"author\", \"bibliography\"] \n",
     "\n",
     "    # Criar um parser de consulta para pesquisar em vários campos\n",
     "    query_parser = MultifieldParser(fields, schema=document_index.schema)\n",
@@ -187,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,15 +234,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia Média =  1.6118421052631584\n",
-      "Tempo total de execução das buscas: 2.5390 segundos\n"
+      "Acurácia Média =  1.217105263157895\n",
+      "Tempo total de execução das buscas: 3.4890 segundos\n"
      ]
     }
    ],
